--- a/problems/0236.二叉树的最近公共祖先.md
+++ b/problems/0236.二叉树的最近公共祖先.md
@@ -49,7 +49,7 @@
 
 **如果找到一个节点，发现左子树出现结点p，右子树出现节点q，或者 左子树出现结点q，右子树出现节点p，那么该节点就是节点p和q的最近公共祖先。**
 
-使用后序遍历，回溯的过程，就是从低向上遍历节点，一旦发现如何这个条件的节点，就是最近公共节点了。
+使用后序遍历，回溯的过程，就是从低向上遍历节点，一旦发现符合这个条件的节点，就是最近公共节点了。
 
 递归三部曲：
 
